Update generated documentation for version 0.1

--- a/license.html
+++ b/license.html
@@ -12,8 +12,8 @@
     <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
 
-    <link type="text/css" rel="stylesheet" href="/FunReal/content/style.css" />
-    <script type="text/javascript" src="/FunReal/content/tips.js"></script>
+    <link type="text/css" rel="stylesheet" href="/REAL-NET/content/style.css" />
+    <script type="text/javascript" src="/REAL-NET/content/tips.js"></script>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -26,7 +26,7 @@
           <li><a href="http://fsharp.org">fsharp.org</a></li>
           <li><a href="https://github.com/yurii-litvinov/REAL.NET">github page</a></li>
         </ul>
-        <h3 class="muted"><a href="/FunReal/index.html">FunReal</a></h3>
+        <h3 class="muted"><a href="/REAL-NET/index.html">FunReal</a></h3>
       </div>
       <hr />
       <div class="row">
@@ -232,19 +232,19 @@ limitations under the License.</p>
 
         </div>
         <div class="span3">
-          <img src="/FunReal/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <img src="/REAL-NET/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">FunReal</li>
-            <li><a href="/FunReal/index.html">Home page</a></li>
+            <li><a href="/REAL-NET/index.html">Home page</a></li>
             <li class="divider"></li>
             <li><a href="https://github.com/yurii-litvinov/REAL.NET">Source Code on GitHub</a></li>
-            <li><a href="/FunReal/license.html">License</a></li>
-            <li><a href="/FunReal/release-notes.html">Release Notes</a></li>
+            <li><a href="/REAL-NET/license.html">License</a></li>
+            <li><a href="/REAL-NET/release-notes.html">Release Notes</a></li>
             
             <li class="nav-header">Getting started</li>
 
             <li class="nav-header">Documentation</li>
-            <li><a href="/FunReal/reference/index.html">API Reference</a></li>
+            <li><a href="/REAL-NET/reference/index.html">API Reference</a></li>
           </ul>
         </div>
       </div>
